--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/graphql": "^13.2.0",
+    "@nestjs/platform-express": "^11.1.6",
     "custom-env": "^2.0.6",
+    "express": "^5.1.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
+    "graphql": "^16.11.0",
     "minimatch": "^10.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
