Add scripts to run firebase functions with staging/production environment

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "build": "yarn build:pre && yarn build:post",
     "deploy:staging": "firebase use staging && firebase deploy",
     "deploy:prod": "firebase use prod && firebase deploy",
-    "firebase:functions:serve": "yarn build && firebase serve --only functions",
-    "firebase:functions:shell": "yarn build && firebase functions:shell",
-    "firebase:emulators:stop": "echo 'stop emulators... \n start emulators...'",
-    "firebase:emulators:start": "yarn firebase:emulators:stop && firebase emulators:start --export-on-exit=dev-saved-data/ --import=dev-saved-data/",
     "watch": "tsc-watch -p tsconfig.build.json --onSuccess \"yarn build:post\"",
-    "dev": "concurrently -k -r -s first 'yarn watch' 'cross-env NODE_ENV=dev yarn firebase:emulators:start'",
+    "firebase:functions:serve": "firebase serve --only functions",
+    "firebase:functions:shell": "firebase functions:shell",
+    "firebase:emulators:start": "cross-env NODE_ENV=dev firebase emulators:start --export-on-exit=dev-saved-data/ --import=dev-saved-data/",
+    "dev": "concurrently -k -r -s first 'yarn watch' 'yarn firebase:emulators:start'",
+    "staging": "concurrently -k -r -s first 'yarn watch' 'cross-env NODE_ENV=staging yarn firebase:functions:serve'",
+    "prod": "concurrently -k -r -s first 'yarn watch' 'cross-env NODE_ENV=prod yarn firebase:functions:serve'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
