--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.2.0",
     "@nestjs/platform-express": "^11.1.6",
+    "busboy": "^1.6.0",
     "custom-env": "^2.0.6",
     "express": "^5.1.0",
     "firebase-admin": "^12.1.0",
@@ -57,6 +58,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/minimatch": "^6.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "concurrently": "^9.2.1",
